--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -176,8 +176,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AppSettingsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SeedDataController.cs" />
+    <Compile Include="Areas\Admin\Controllers\DemoDataController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
+    <Compile Include="Areas\Admin\Models\AppSettingVM.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AdmPanelController.cs" />
     <Compile Include="Controllers\BaseController.g.cs" />
     <Compile Include="Controllers\BaseController.part.cs" />
     <Compile Include="Controllers\ContactsController.g.cs" />
@@ -190,21 +196,20 @@
     <Compile Include="Controllers\ProcessesController.part.cs" />
     <Compile Include="Controllers\ProcessStepsController.g.cs" />
     <Compile Include="Controllers\ProcessStepsController.part.cs" />
-    <Compile Include="Controllers\ProcessStepTemplatesController.g.cs" />
-    <Compile Include="Controllers\ProcessStepTemplatesController.part.cs" />
-    <Compile Include="Controllers\ProcessTemplatesController.g.cs" />
-    <Compile Include="Controllers\ProcessTemplatesController.part.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProcessStepTemplatesController.g.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProcessStepTemplatesController.part.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProcessTemplatesController.g.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProcessTemplatesController.part.cs" />
     <Compile Include="Controllers\ProductCategoriesController.g.cs" />
     <Compile Include="Controllers\ProductCategoriesController.part.cs" />
-    <Compile Include="Controllers\AdmPanelController.seed.cs" />
     <Compile Include="Controllers\ProductsController.g.cs" />
     <Compile Include="Controllers\ProductsController.part.cs" />
     <Compile Include="Controllers\PurchaseOrdersController.g.cs" />
     <Compile Include="Controllers\PurchaseOrdersController.part.cs" />
-    <Compile Include="Controllers\SizeCaptionsController.g.cs" />
-    <Compile Include="Controllers\SizeCaptionsController.part.cs" />
-    <Compile Include="Controllers\SizeStandardsController.g.cs" />
-    <Compile Include="Controllers\SizeStandardsController.part.cs" />
+    <Compile Include="Areas\Admin\Controllers\SizeCaptionsController.g.cs" />
+    <Compile Include="Areas\Admin\Controllers\SizeCaptionsController.part.cs" />
+    <Compile Include="Areas\Admin\Controllers\SizeStandardsController.g.cs" />
+    <Compile Include="Areas\Admin\Controllers\SizeStandardsController.part.cs" />
     <Compile Include="Controllers\SuppliersController.g.cs" />
     <Compile Include="Controllers\SuppliersController.part.cs" />
     <Compile Include="Global.asax.cs">
@@ -222,6 +227,7 @@
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Default\bootstrap.min.css" />
     <Content Include="Content\Default\darker.css" />
     <Content Include="Content\NavbarColors-Blue.css" />
@@ -286,6 +292,7 @@
     <Content Include="Content\tools.css" />
     <Content Include="favicon.ico" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
@@ -308,6 +315,18 @@
     <Content Include="CodeTemplates\MvcView\Imports.include.t4" />
     <Content Include="CodeTemplates\MvcView\List.cs.t4" />
     <Content Include="CodeTemplates\MvcView\ModelMetadataFunctions.cs.include.t4" />
+    <Content Include="Areas\Admin\Views\web.config" />
+    <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Admin\Views\SeedData\Index.cshtml" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Areas\Admin\Views\DemoData\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\DemoData\Seed.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminHome\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AppSettings\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -320,6 +339,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -397,14 +417,14 @@
     <Content Include="Views\Shared\DisplayTemplates\ProcessStep.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\ProcessStepTemplate.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\ProcessTemplate.cshtml" />
-    <Content Include="Views\ProcessTemplates\Create.cshtml" />
-    <Content Include="Views\ProcessTemplates\Details.cshtml" />
-    <Content Include="Views\ProcessTemplates\Edit.cshtml" />
-    <Content Include="Views\ProcessTemplates\Index.cshtml" />
-    <Content Include="Views\ProcessStepTemplates\Create.cshtml" />
-    <Content Include="Views\ProcessStepTemplates\Details.cshtml" />
-    <Content Include="Views\ProcessStepTemplates\Edit.cshtml" />
-    <Content Include="Views\ProcessStepTemplates\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessTemplates\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessTemplates\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessTemplates\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessTemplates\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessStepTemplates\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessStepTemplates\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessStepTemplates\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ProcessStepTemplates\Index.cshtml" />
     <Content Include="Views\ProcessSteps\Details.cshtml" />
     <Content Include="Views\ProcessSteps\Edit.cshtml" />
     <Content Include="Views\ProcessSteps\Index.cshtml" />
@@ -413,7 +433,7 @@
     <Content Include="Views\PurchaseOrders\Details.cshtml" />
     <Content Include="Views\PurchaseOrders\Edit.cshtml" />
     <Content Include="Views\PurchaseOrders\Index.cshtml" />
-    <Content Include="Views\AdmPanel\SelectTheme.cshtml" />
+    <Content Include="Areas\Admin\Views\AppSettings\SelectTheme.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Product.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Boolean.cshtml" />
     <Content Include="Views\PurchaseOrders\Approve.cshtml" />
@@ -422,14 +442,14 @@
     <Content Include="Views\Shared\Approve.cshtml" />
     <Content Include="Views\Shared\_ProductCategorySelectPartial.cshtml" />
     <Content Include="Views\Shared\_ProductSelectPartial.cshtml" />
-    <Content Include="Views\SizeStandards\Create.cshtml" />
-    <Content Include="Views\SizeStandards\Details.cshtml" />
-    <Content Include="Views\SizeStandards\Edit.cshtml" />
-    <Content Include="Views\SizeStandards\Index.cshtml" />
-    <Content Include="Views\SizeCaptions\Create.cshtml" />
-    <Content Include="Views\SizeCaptions\Details.cshtml" />
-    <Content Include="Views\SizeCaptions\Edit.cshtml" />
-    <Content Include="Views\SizeCaptions\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeStandards\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeStandards\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeStandards\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeStandards\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeCaptions\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeCaptions\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeCaptions\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SizeCaptions\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
